--- a/src/assets/ContentCard.css
+++ b/src/assets/ContentCard.css
@@ -1,5 +1,6 @@
 .card {
-    background-color: rgb(32, 32, 32);
+    background-color: rgb(32, 32, 32) !important;
     color: rgb(8, 223, 8);
     margin-bottom: 5px;
+    margin-top: 5px;
 }
